doc/static/code/FirstAgent_WinQt/dependencies/headers/ingescape/ingescape.h

#define PUBLIC __declspec(dllexport)
#define PUBLIC __declspec(dllimport)
#define PUBLIC
//////////////////////////////////////////////////
//IOP Model : Inputs, Outputs and Parameters read/write/check/observe/mute

typedef enum {
    IGS_INPUT_T = 1, ///< input of an agent.
    IGS_OUTPUT_T,    ///< output of an agent.
    IGS_PARAMETER_T  ///< parameter of an agent.
} iop_t;
typedef enum {
    IGS_INTEGER_T = 1,  ///< integer value type
    IGS_DOUBLE_T,       ///< double value type
    IGS_STRING_T,       ///< string value type
    IGS_BOOL_T,         ///< bool value type
    IGS_IMPULSION_T,    ///< impulsion value type
    IGS_DATA_T,         ///< data value type
    IGS_UNKNOWN_T       ///< for unknown parsed types
} iopType_t;
//write per type
PUBLIC int igs_writeInputAsBool(const char *name, bool value);
PUBLIC int igs_writeInputAsInt(const char *name, int value);
PUBLIC int igs_writeInputAsDouble(const char *name, double value);
PUBLIC int igs_writeInputAsString(const char *name, char *value);
PUBLIC int igs_writeInputAsImpulsion(const char *name);
PUBLIC int igs_writeInputAsData(const char *name, void *value, size_t size);
PUBLIC int igs_writeOutputAsBool(const char *name, bool value);
PUBLIC int igs_writeOutputAsInt(const char *name, int value);
PUBLIC int igs_writeOutputAsDouble(const char *name, double value);
PUBLIC int igs_writeOutputAsString(const char *name, char *value);
PUBLIC int igs_writeOutputAsImpulsion(const char *name);
PUBLIC int igs_writeOutputAsData(const char *name, void *value, size_t size);
PUBLIC int igs_writeParameterAsBool(const char *name, bool value);
PUBLIC int igs_writeParameterAsInt(const char *name, int value);
PUBLIC int igs_writeParameterAsDouble(const char *name, double value);
PUBLIC int igs_writeParameterAsString(const char *name, char *value);
PUBLIC int igs_writeParameterAsData(const char *name, void *value, size_t size);
//check IOP type, lists and existence
PUBLIC iopType_t igs_getTypeForInput(const char *name);
PUBLIC iopType_t igs_getTypeForOutput(const char *name);
PUBLIC iopType_t igs_getTypeForParameter(const char *name);
PUBLIC int igs_getInputsNumber(void);
PUBLIC int igs_getOutputsNumber(void);
PUBLIC int igs_getParametersNumber(void);
PUBLIC char** igs_getInputsList(long *nbOfElements); //returned char** must be freed using igs_freeIOPList
PUBLIC char** igs_getOutputsList(long *nbOfElements); //returned char** must be freed using igs_freeIOPList
PUBLIC char** igs_getParametersList(long *nbOfElements); //returned char** must be freed using igs_freeIOPList
PUBLIC void igs_freeIOPList(char ***list, long nbOfElements);
PUBLIC bool igs_checkInputExistence(const char *name);
PUBLIC bool igs_checkOutputExistence(const char *name);
PUBLIC bool igs_checkParameterExistence(const char *name);
//observe writing to IOP
typedef void (*igs_observeCallback)(iop_t iopType, const char* name, iopType_t valueType, void* value, size_t valueSize, void* myData);
PUBLIC int igs_observeInput(const char *name, igs_observeCallback cb, void *myData);
PUBLIC int igs_observeOutput(const char *name, igs_observeCallback cb, void * myData);
PUBLIC int igs_observeParameter(const char *name, igs_observeCallback cb, void * myData);
//mute or unmute an IOP
PUBLIC int igs_muteOutput(const char *name);
PUBLIC int igs_unmuteOutput(const char *name);
PUBLIC bool igs_isOutputMuted(const char *name);